--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-t-50 p-b-90">
-				<form class="login100-form validate-form flex-sb flex-w" role="form" method="POST" action="/">
+				<form class="login100-form validate-form flex-sb flex-w" role="form" method="POST" action="/login">
 					<span class="login100-form-title p-b-51">
 						Login
 					</span>
