--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -1,3 +1,28 @@
-<div>
-    all patient
+<link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+
+
+<div class="container" style="margin-top: 10vh; margin-bottom: 5vh;">
+
+    <div class="page-heading" style="padding-bottom: 4rem;">
+        <h1 style="float: left">Admin Dashboard</h1>
+        <a href="/EN/blog/admin/add" class="btn btn-outline-primary" style="float: right">Add a Blog</a>
+    </div>
+
+    
+    <table style="width:100%">
+        <tr>
+            <th>patients</th>
+            <th>Actions</th>
+        </tr>
+    
+        <% for(var i = 0; i < patients.length; i++) {%>
+            <tr>
+                <td style="font-weight: bold"><%= patients[i].firstname %> <%= patients[i].lastname %></td>
+                <td> <a class="btn" href="/patients/<%= patients[i]._id %>/edit" >Edit</a></td>
+
+            </tr>
+        <% }%>
+    
+    </table>
 </div>
