--- a/public/css/main.css
+++ b/public/css/main.css
@@ -438,3 +438,11 @@ td, th {
   padding: 18px;
 
 }
+
+textarea {
+  padding: 10px;
+  line-height: 1.5;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+
+}
