improvement according to security assignment

--- a/views/newRecord.ejs
+++ b/views/newRecord.ejs
@@ -4,7 +4,7 @@
 <div class="container" style="margin-top: 10vh; margin-bottom: 5vh;">
 
     <h1 style="margin-bottom: 5rem;">
-        Patient Record
+        New Patient Record
     </h1>
 
 <div class="row">
