--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,9 +81,9 @@ textarea {
   border: none;
 }
 
-textarea:focus, input:focus {
+/* textarea:focus, input:focus {
   border-color: transparent !important;
-}
+} */
 
 input::-webkit-input-placeholder { color: #8f8fa1;}
 input:-moz-placeholder { color: #8f8fa1;}
