--- a/views/newRecord.ejs
+++ b/views/newRecord.ejs
@@ -25,20 +25,14 @@
                     </div>
                 </div>
 
-                <div class="control-group">
+                <div class="control-group" style="display: none;">
                     <div class="form-group floating-label-form-group controls">
-                        <label for="author">Select Doctor </label>
-                        <select name="doctorName">
-                            <option value="Kalisa">DR kalisa</option>
-                            <option value="Patrick">DR Patrick</option>
-                            <option value="Marie">DR Marie</option>
-                            <option value="Alice">DR Alice</option>
-                            
-                        </select>
+                        <label> Doctor Name </label>
+                        <input type="text" name="doctor" value="Kalisa">
                     </div>
                 </div>
 
-                <div class="control-group">
+                <div class="control-group" >
                     <div class="form-group floating-label-form-group controls">
                         <label>Patient illiness details</label>
                         <textarea name="details"  cols="75" rows="10" type="textarea" ></textarea>
