--- a/views/record.ejs
+++ b/views/record.ejs
@@ -21,7 +21,7 @@
             <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                     <label>Doctor Name</label>
-                    <input type="text"  class="form-control" readonly value="DR <%= record.doctorName %>" >
+                    <input type="text"  class="form-control" readonly value="DR <%= record.doctor %>" >
                 </div>
             </div>
 
