--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,12 @@
 <div class="row">
     <div class="col-md-8 offset-md-2">
             <form role="form" method="post" action="/reception/register">
-
+            <div class="control-group">
+                <div class="form-group floating-label-form-group controls">
+                    <label>National ID</label>
+                    <input type="text" name="NID"  class="form-control">
+                </div>
+            </div>
 
             <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
